src/objects/TR1__Job_Board_Application__c.object
<CustomObject>
    <fields>
        <fullName>Rejection_Comment__c</fullName>
        <label>Rejection Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant Will Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>JobBoardApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Board_Source__c</fullName>
        <label>Job Board Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Website</fullName>
                </value>
                <value>
                    <fullName>Google Search</fullName>
                </value>
                <value>
                    <fullName>Yahoo Search</fullName>
                </value>
                <value>
                    <fullName>Bing Search</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Indeed</fullName>
                </value>
                <value>
                    <fullName>SoCRA</fullName>
                </value>
                <value>
                    <fullName>ISPE</fullName>
                </value>
                <value>
                    <fullName>SCDM</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>RAPS</fullName>
                </value>
                <value>
                    <fullName>Net-Temps</fullName>
                </value>
                <value>
                    <fullName>NACCB</fullName>
                </value>
                <value>
                    <fullName>Job Fair</fullName>
                </value>
                <value>
                    <fullName>Career builder</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>Ad</fullName>
                </value>
                <value>
                    <fullName>ACRP</fullName>
                </value>
                <value>
                    <fullName>DICE</fullName>
                </value>
                <value>
                    <fullName>cvlibrary</fullName>
                    <label>CV Library</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipName>JobBoardApplications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Job Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Board Application</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>TR1__Job__c</columns>
        <columns>TR1__Applicant__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TR1__Status__c</columns>
        <columns>TR1__Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR1__All_New_Job_Board_Applications</fullName>
        <columns>NAME</columns>
        <columns>TR1__Applicant__c</columns>
        <columns>TR1__Job__c</columns>
        <columns>TR1__Job_Board_Source__c</columns>
        <columns>TR1__Rating__c</columns>
        <columns>TR1__Source__c</columns>
        <columns>TR1__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR1__Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All New Job Board Applications</label>
    </listViews>
    <nameField>
        <displayFormat>JBA-{MM}{DD}{YYYY}-{0}</displayFormat>
        <label>Job Board Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Board Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>